<resources>
    <string name="app_name">Balança diária</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Histórico</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_edit_user">Editar Perfil</string>
    <string name="title_create_user">Criar Perfil</string>
    <string name="unit_of_measurement">Kg</string>
    <string name="unit_percent">%</string>
    <string name="unit_of_measurement_imc">Kg/m²</string>
    <string name="register">Registrar</string>
    <string name="edit">Editar</string>
    <string name="delete">Deletar</string>
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="labal_daily_weight">Seu peso hoje:</string>
    <string name="add_weight">Add peso</string>
    <string name="comma">,</string>
    <string name="goal">Meta</string>
    <string name="history_weights">Histórico</string>
    <string name="begin">Início</string>
    <string name="current">Atual</string>
    <string name="alert">Alerta</string>
    <string name="text_what_is_your_goal">"Qual é a sua meta?"</string>
    <string name="text_what_is_your_weight">Qual é o seu peso?</string>
    <string name="error_goal_weight_null">Ops, por favor adicione o seu peso de hoje antes de criar sua meta</string>
    <string name="error_weight_greater_than_goal">Ops, sua meta não pode ser maior ou igual ao seu peso atual</string>
    <string name="finish_goal">Parabéns!!!\n Você completou sua meta, clique aqui para cadastrar uma nova meta e continuar registrando o seu esforço!</string>
    <string name="end">Fim</string>
    <string name="my_goal">Minhas metas</string>
    <string name="to">Para:</string>
    <string name="from">De:</string>
    <string name="imc">Índice de Massa Corpórea (IMC)</string>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="name">Nome:</string>
    <string name="age">Idade:</string>
    <string name="genre">Gênero:</string>
    <string name="height">Altura:</string>
    <string name="height_cm">Altura (cm):</string>
    <string name="message_register_user">Olá, ainda não nos conhecemos, por favor nos informe alguns dados para aperfeiçoar nossos cálculos!</string>
    <string name="message_create_goal">Ainda não possui meta cadastrada, clique aqui para cadastrar sua meta</string>
    <string name="message_register_imc">Registre seu peso para calcular o índice de massa corporal (IMC)</string>
    <string name="field_required">Campo obrigatório</string>
    <string name="field_invalid_between_value">Valor inválido</string>
    <string name="progress">Progresso</string>
    <string name="high_imc">Maior IMC</string>
    <string name="high_peso">Maior peso</string>
    <string name="current_weight">Peso atual</string>
    <string name="current_imc">IMC atual</string>
    <string name="low_weight">Menor peso</string>
    <string name="low_imc">Menor IMC</string>
    <string name="qtd_goals">Qtd. de metas alcançadas</string>
    <string name="default_value">0.0</string>
    <string name="init_weight">Peso inicial</string>
    <string name="init_imc">IMC inicial</string>
    <string name="adicionar_no_dia">Adicionar no dia</string>
    <string name="add_weight_in_date">Registrar peso no dia</string>
    <string name="weight">Peso</string>
</resources>
