<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.br.weightcontrol.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_userFragment"
            app:destination="@id/userFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.br.weightcontrol.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.br.weightcontrol.ui.perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" >
        <action
            android:id="@+id/action_navigation_perfil_to_userFragment"
            app:destination="@id/userFragment" />
    </fragment>

    <fragment
        android:id="@+id/userFragment"
        android:name="com.br.weightcontrol.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user">
        <argument
            android:name="user"
            app:argType="com.br.weightcontrol.data.user.User"
            app:nullable="true" />
    </fragment>
</navigation>